# permatracks_gui

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt  README.md  main.cpp
calibration/: CMakeLists.txt
calibration/include/: ellipsoid_fit.h
calibration/src/: ellipsoid_fit.cpp
data/calibrations/: current_calibration_data.json
data/models/: inverse_biot_savart_net_encoder_decoder_100000.pt  inverse_biot_savart_net_encoder_decoder_1000000.pth  inverse_biot_savart_net_encoder_decoder_with_direction_25_5000000.pt  inverse_biot_savart_net_resnet18_1000000.pt  inverse_biot_savart_net_resnet18_2000000.pt
data/stl/: OBJ_PCB_MAGNETOMETER_ARRAY_V1.mtl
include/: App.h  Calibration.h  CalibrationTab.h  CeresOptimizerDirectionVector.h  ConnectionTab.h  ERR.h  MLOptimizer.h  MagnetSelection.h  MagnetSelectionTab.h  MainTabBar.h  MiMedMagnetometerArraySerialConnectionBinary.h  MiMedMagnetometerArraySerialConnectionBinary_old.h  SerialConnection.h  TrackingTab.h  Zeroing.h  ZeroingTab.h  dipol_model_with_direction_vector.h
list_serial_devices/: CMakeLists.txt
list_serial_devices/include/: list_serial_devices.h
list_serial_devices/src/: list_serial_devices_linux.cpp  list_serial_devices_macos.cpp  list_serial_devices_windows.cpp
list_serial_devices/test/: main.cpp
msg/: CMakeLists.txt
msg/include/: Array.h  Box.h  Direction.h  DirectionVector.h  Magnet.h  MagneticFluxDensityData.h  MagneticFluxDensityDataRawAK09940A.h  MagneticFluxDensityDataRawLIS3MDL.h  MagneticFluxDensityDataRawMMC5983MA.h  MagneticFluxDensityIntegerData.h  Message.h  Pack.h  Position.h  RawMagnetometerArrayOutput.h
msg/src/: DirectionVector.cpp  MagneticFluxDensityData.cpp  MagneticFluxDensityDataRawAK09940A.cpp  MagneticFluxDensityDataRawLIS3MDL.cpp  MagneticFluxDensityDataRawMMC5983MA.cpp  MagneticFluxDensityIntegerData.cpp  Message.cpp
ring_buffer/: CMakeLists.txt
ring_buffer/include/: ring_buffer.h
serial_connection/: CMakeLists.txt
serial_connection/include/: SerialConnection.h  SerialConnectionBoost.h
serial_connection/src/: SerialConnectionBoost.cpp  SerialConnectionUnix.cpp  SerialConnectionWindows.cpp
serial_connection/test/: main.cpp
src/: CalibrationTab.cpp  CeresOptimizerDirectionVector.cpp  ConnectionTab.cpp  ERR.cpp  MLOptimizer.cpp  MagnetSelection.cpp  MagnetSelectionTab.cpp  MainTabBar.cpp  TrackingTab.cpp  Zeroing.cpp  ZeroingTab.cpp  dipol_model_with_direction_vector.cpp  dipol_model_with_direction_vector_111.cpp  dipol_model_with_direction_vector_25.cpp  dipol_model_with_direction_vector_41.cpp
test/: minimal.cpp  minimal_3d.cpp  minimal_3d_load.cpp  test3d.cpp  test3d_manipulation.cpp  test_fast_io.cpp  test_magnet.cpp  test_single_producer_single_consumer.cpp  test_torch.cpp
utils/: CMakeLists.txt
utils/include/: AfterReturnPositionDirectionErrorMeasure.h  AfterReturnTimeMeasure.h  Averager.h  ERROR.h  EigenJsonUtils.h  MagnetometerArrayMagneticFluxDensityDataAverager.h  MessagePrinter.h  UpdaterMagnetometerArrayMagneticFluxDensityDataToMagnetometerArrayMagneticFluxDensityDataWithTruePositionDirection.h  linspace.h  utils.h
utils/src/: Averager.cpp  ERROR.cpp  MagnetometerArrayMagneticFluxDensityDataAverager.cpp  MessagePrinter.cpp  UpdaterMagnetometerArrayMagneticFluxDensityDataToMagnetometerArrayMagneticFluxDensityDataWithTruePositionDirection.cpp  linspace.cpp
utils/test/: test_averager.cpp  test_eigen_utils.cpp
